...

    <!-- 공통 -->
    <string name="common_none">없음</string>
    <string name="common_save">저장</string>
    <string name="common_cancel">취소</string>
    <string name="common_delete">삭제</string>
    <string name="common_start">시작</string>
    <string name="common_refresh">새로고침</string>
    <string name="common_select">선택</string>
    <string name="common_set">설정</string>
    <string name="common_disable">해제</string>
    <string name="common_next">다음</string>
    <string name="common_done">완료</string>
...
